--- a/fxs-platform-web/src/main/resources/templates/public_lawsuit_lawyer.html
+++ b/fxs-platform-web/src/main/resources/templates/public_lawsuit_lawyer.html
@@ -10,7 +10,7 @@
 			<div class="col-md-12 lawsuit-content">
 				<h3 class="heading">竞标找律师</h3>
 				<p>律师好不好，比一比就知道</p>
-				<a href="lawsuit_step1.html" class="create-an-account">开始找律师打官司</a>
+				<a th:href="@{/public/lawsuit/start}" class="create-an-account">开始找律师打官司</a>
 			</div>
 		</div>
 	</div>
