--- a/fxs-platform-web/src/main/resources/templates/public_lawsuit_lawyer_step3.html
+++ b/fxs-platform-web/src/main/resources/templates/public_lawsuit_lawyer_step3.html
@@ -8,10 +8,18 @@
 	<div class="mainPart">
 		<div class="container">
 			<ol class="breadcrumb">
-				<li><a href="counseling_free.html">免费法律咨询</a></li>
-				<li class="active">填写纠纷基本信息</li>
+				<li><a href="lawsuit_step1.html">选择类型</a></li>
+				<li><a href="lawsuit_step1.html">房屋买卖、房屋租赁、动拆迁</a></li>
+				<li class="active">填写信息</li>
 			</ol>
-			<h1 class="blue">填写纠纷基本信息</h1>
+			<h1>提交您的案情 - 填写基本信息</h1>
+			<p>
+				不知道如何填写？拨打客服热线 <span class="orange">400-850-8650</span> 获得帮助
+			</p>
+			<p>
+				<span class="orange">9406</span> 名用户正在通过 小帅网竞标模式 找律师 <a href="#">[
+					查看经典案例 ]</a>
+			</p>
 			<section class="col-md-12 col-sm-12 introcouPhone space20 sBtn">
 				<h3>您是代表谁找律师？</h3>
 				<div class="row">
@@ -23,12 +31,12 @@
 				</div>
 				<h3 class="space10">请问您本次咨询的主要目的是？</h3>
 				<div class="row">
-					<ul class="col-md-7 col-sm-12">
+					<ul class="col-md-4 col-sm-12">
 						<li class="introcoupCell btnSquare"><a href="#">纠纷已经发生，想咨询如何解决该纠纷</a></li>
 					</ul>
 				</div>
 				<div class="row">
-					<ul class="col-md-7 col-sm-12">
+					<ul class="col-md-4 col-sm-12">
 						<li class="introcoupCell btnSquare cur"><a href="#">纠纷尚未发生，想咨询法律程序、风险等问题</a></li>
 					</ul>
 				</div>
@@ -43,62 +51,36 @@
 				</div>
 				<h3 class="space10">纠纷是否已由法院判决或裁定？</h3>
 				<div class="row">
-					<ul class="col-md-7 col-sm-12">
+					<ul class="col-md-4 col-sm-12">
 						<li class="introcoupCell btnSquare"><a href="#">纠纷是否已由法院判决或裁定？</a></li>
 					</ul>
 				</div>
 				<div class="row">
-					<ul class="col-md-7 col-sm-12">
+					<ul class="col-md-4 col-sm-12">
 						<li class="introcoupCell btnSquare"><a href="#">是 -
 								已收到一审判决书或驳回起诉裁定书</a></li>
 					</ul>
 				</div>
 				<div class="row">
-					<ul class="col-md-7 col-sm-12">
+					<ul class="col-md-4 col-sm-12">
 						<li class="introcoupCell btnSquare"><a href="#">是 -
 								已收到二审判决书或驳回起诉裁定书</a></li>
 					</ul>
 				</div>
-				<h3 class="space10">请输入时间</h3>
-				<div class="row">
-					<div class="form-group col-md-3 col-sm-3">
-						<select class="form-control">
-							<option value="">请选择</option>
-							<option value="">2017</option>
-							<option value="">2016</option>
-							<option value="">2015</option>
-							<option value="">2014</option>
-						</select>
-					</div>
-					<div class="form-group col-md-1 col-sm-1 sLabel">
-						<label>年</label>
-					</div>
-					<div class="form-group col-md-3 col-sm-3">
-						<select class="form-control">
-							<option value="">请选择</option>
-							<option value="">12</option>
-							<option value="">11</option>
-							<option value="">10</option>
-							<option value="">9</option>
-						</select>
-					</div>
-					<div class="form-group col-md-1 col-sm-1 sLabel">
-						<label>月</label>
-					</div>
-				</div>
 				<h3 class="space10">您家人对法院判决或仲裁裁决的态度？</h3>
 				<div class="row">
-					<ul class="col-md-7 col-sm-12">
+
+					<ul class="col-md-4 col-sm-12">
 						<li class="introcoupCell btnSquare"><a href="#">不满意法院判决或仲裁裁决</a></li>
 					</ul>
 				</div>
 				<div class="row">
-					<ul class="col-md-7 col-sm-12">
+					<ul class="col-md-4 col-sm-12">
 						<li class="introcoupCell btnSquare"><a href="#">满意法院判决或仲裁裁决，但对方不满意</a></li>
 					</ul>
 				</div>
 				<div class="row">
-					<ul class="col-md-7 col-sm-12">
+					<ul class="col-md-4 col-sm-12">
 						<li class="introcoupCell btnSquare"><a href="#">双方均不满意法院判决或仲裁裁决</a></li>
 					</ul>
 				</div>
@@ -116,6 +98,7 @@
 				</div>
 				<h3>您家人在原案件中是？</h3>
 				<div class="row">
+
 					<ul class="col-md-2 col-sm-2">
 						<li class="introcoupCell btnSquare"><a href="#">原告</a></li>
 					</ul>
@@ -125,9 +108,14 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12 col-sm-12 btnNext">
-						<a type="button" class="btn btn-primary btn-lg" th:href="@{/public/consultation/next}">下一步</a>
+						<a type="button" class="btn btn-primary btn-lg" th:href="@{/public/lawsuit/next}">下一步</a>
 					</div>
 				</div>
+				<!-- <div class="row">
+					<div class="col-md-12 col-sm-12 btnNext">
+						<button type="button" class="btn btn-primary btn-lg">立即提交</button>
+					</div>
+				</div> -->
 			</section>
 		</div>
 	</div>
