--- a/fxs-platform-web/src/main/resources/templates/lawyerSignIn.html
+++ b/fxs-platform-web/src/main/resources/templates/lawyerSignIn.html
@@ -11,7 +11,7 @@
           <p >用专业势力赢得案例</p>
           <a th:href="@{/user/signIn}" class="create-an-account" >律师登录</a>
           &nbsp;&nbsp;
-          <a href="laywer_sign_pop.html" class="create-an-account" >律师注册</a>
+          <a th:href="@{/user/register}" class="create-an-account" >律师注册</a>
       	</div>
 	</div>
 	<div th:replace="fragments/public_footer :: public-footer"></div>
