--- a/fxs-platform-web/src/main/resources/templates/fragments/public_footer.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/public_footer.html
@@ -2,7 +2,7 @@
 	xmlns:th="http://www.thymeleaf.org">
 <div th:fragment="public-footer">
 	<footer>
-		<script th:src="@{/js/jquery-3.2.1.slim.min.js}"></script>
+		<script type="text/javascript" src="/webjars/jquery/3.0.0/jquery.min.js"></script>
 		<script th:src="@{/js/popper.min.js}"></script>
 		<script th:src="@{/bootstrap/dist/js/bootstrap.min.js}"></script>
 		<ul class="list-group">
