--- a/fxs-platform-web/src/main/resources/templates/fragments/user_center_header.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/user_center_header.html
@@ -5,7 +5,7 @@
 <div th:fragment="user-center-header-css">
 	<meta charset="utf-8" />
         <title>上海小帅信息科技有限公司</title>
-        <meta name="description" content="Love Authority." />
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" />
         <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
