--- a/fxs-platform-web/src/main/resources/templates/public_consulting_phone.html
+++ b/fxs-platform-web/src/main/resources/templates/public_consulting_phone.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<div th:replace="fragments/litigant_header :: litigant-header-css"></div>
+<div th:replace="fragments/public_header_style_2 :: public-header-2-css"></div>
 </head>
 <body>
-	<div th:replace="fragments/litigant_header :: litigant-header"></div>
+	<div th:replace="fragments/public_header_style_2 :: public-header-2"></div>
 	<div class="mainPart">
 		<div class="container">
 			<h1>电话咨询</h1>
