--- a/fxs-platform-web/src/main/resources/templates/fragments/lawyer_header.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/lawyer_header.html
@@ -22,6 +22,9 @@
 					</div>
 					<nav class="col-md-9 navbar-default" role="navigation">
 						<ul class="nav mainNav">
+							<li>
+								<a th:href="@{/user/dashboard}">个人中心</a>
+							</li>
 							<li class="active">
 								<a th:href="@{/user/dashboard}">诉讼业务</a>
 							</li>
