--- a/fxs-platform-web/src/main/resources/templates/fragments/litigant_header.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/litigant_header.html
@@ -42,7 +42,7 @@
 						<img th:src="@{/img/logo.png}" />
 					</div>
 					<div class="col-md-1 mapId">上海</div>
-					<nav class="col-md-8 navbar-default" role="navigation">
+					<nav class="col-md-8 navbar-default" role="navigation" sec:authorize="hasRole('ROLE_USER')">
 						<ul class="nav mainNav">
 							<li class="active">
 								<a th:href="@{/}">首页</a>
