--- a/fxs-platform-web/src/main/resources/templates/fragments/public_header_style_2.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/public_header_style_2.html
@@ -17,20 +17,28 @@
 		<div class="topBar col-md-12">
 			<div class="container">
 				<ul class="nav loginBox">
-					<li>
+					<li sec:authorize="isAuthenticated()">
 						欢迎<span sec:authentication="name"></span>
 						<span>|</span>
 					</li>
-					<li>
+					<li sec:authorize="isAnonymous()">
+						<a th:href="@{/user/signIn}">登录</a>
+						<span>|</span>
+					</li>
+					<li sec:authorize="isAnonymous()">
+						<a th:href="@{/user/register}">注册</a>
+						<span>|</span>
+					</li>
+					<li sec:authorize="isAuthenticated()">
 						<a th:href="@{/user/dashboard}">个人中心</a>
 						<span>|</span>
 					</li>
 					<li>
-						<a href="#" target="_self">关于我们</a>
+						<a href="#">关于我们</a>
 						<span>|</span>
 					</li>
-					<li>
-						<a th:href="@{/signOut}" sec:authorize="isAuthenticated()">登出</a>
+					<li sec:authorize="isAnonymous()">
+						<a th:href="@{/lawyer/signIn}">律师入口</a>
 					</li>
 				</ul>
 				<ul class="clearboth"></ul>
