--- a/fxs-platform-web/src/main/resources/templates/public_lawsuit_lawyer_step4.html
+++ b/fxs-platform-web/src/main/resources/templates/public_lawsuit_lawyer_step4.html
@@ -51,7 +51,7 @@
 						</ul>
 						<div class="row">
 							<div class="col-md-12 col-sm-12 btnNext">
-								<button type="button" class="btn btn-primary btn-lg">提交咨询</button>
+								<a th:href="@{/public/lawsuit/submit}" type="button" class="btn btn-primary btn-lg">提交咨询</a>
 								<a href="#">[查看解答示例]</a>
 							</div>
 						</div>
