--- a/fxs-platform-web/src/main/resources/templates/admin_dashboard.html
+++ b/fxs-platform-web/src/main/resources/templates/admin_dashboard.html
@@ -8,7 +8,8 @@
 	<div class="mainPart">
 		<div class="container">
 			<a th:href="@{/falltypus/create/parent}" type="button" class="btn btn-primary btn-lg btn-block">创建案件类型</a>
-			<a th:href="@{/falltypus/create/sub}" type="button" class="btn btn-secondary btn-lg btn-block">创建案件子类型</a>
+			<a th:href="@{/falltypus/create/sub}" type="button" class="btn btn-primary btn-lg btn-block">创建案件子类型</a>
+			<a th:href="@{/questionnaire/create}" type="button" class="btn btn-primary btn-lg btn-block">创建问卷</a>
 		</div>
 	</div>
 	<div th:replace="fragments/public_footer :: public-footer" ></div>
