--- a/fxs-platform-web/src/main/resources/templates/public_list_dispute_info.html
+++ b/fxs-platform-web/src/main/resources/templates/public_list_dispute_info.html
@@ -11,17 +11,15 @@
 				<tr bgcolor="lightblue">
 					<th>纷争编号</th>
 					<th>纷争名称</th>
-					<th>创建日期</th>
-					<th>状态</th>
+					<th>是否一级问题</th>
 					<th>操作</th>
 				</tr>
-				<tr th:each="disputeInfo : ${disputeInfoList}">
-					<td th:text="${disputeInfo.id}"></td>
-					<td th:text="${disputeInfo.name}"></td>
-					<td th:text="${disputeInfo.createAt}"></td>
-					<td th:text="${disputeInfo.status}"></td>
+				<tr th:each="question : ${questionList}">
+					<td th:text="${question.id}"></td>
+					<td th:text="${question.description}"></td>
+					<td th:text="${question.isRootQuestion}"></td>
 					<td>
-						<a th:href="@{/disputeInfo/viewDisputeInfo/{id}(id=${disputeInfo.id})}">查看</a>
+						<a th:href="@{/disputeInfo/viewDisputeInfo/{id}(id=${question.id})}">查看</a>
 				 	</td>
 				</tr>
 			</table>
