--- a/fxs-platform-web/src/main/resources/templates/fragments/public_header_style_2.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/public_header_style_2.html
@@ -59,11 +59,11 @@
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown"> 法律咨询 </a>
 								<ul class="dropdown-menu">
 									<li>
-										<a th:href="@{/public/consultation/free}">免费法律咨询</a>
+										<a th:href="@{/public/case/consulting/free}">免费法律咨询</a>
 									</li>
 									<li class="divider"></li>
 									<li>
-										<a th:href="@{/public/consultation/phone}">电话咨询</a>
+										<a th:href="@{/public/case/consulting/phone}">电话咨询</a>
 									</li>
 								</ul>
 							</li>
@@ -71,11 +71,11 @@
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown"> 打官司 </a>
 								<ul class="dropdown-menu">
 									<li>
-										<a th:href="@{/public/lawsuit/lawyer}">找律师打官司</a>
+										<a th:href="@{/public/case/lawsuit/lawyer}">找律师打官司</a>
 									</li>
 									<li class="divider"></li>
 									<li>
-										<a th:href="@{/public/lawsuit/self_service}">自助打官司</a>
+										<a th:href="@{/public/case/lawsuit/self_service}">自助打官司</a>
 									</li>
 								</ul>
 							</li>
