--- a/fxs-platform-web/src/main/resources/templates/litigant_dashboard.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_dashboard.html
@@ -13,36 +13,36 @@
 					<div class="col-md-4 col-sm-4">
 						<ul class="introcoupCell mycenterCell">
 							<li>
-								<a th:href="@{/litigant/consultation/free}">
+								<a th:href="@{/litigant/case/consulting/free}">
 									<img th:src="@{/img/mycenter_free.png}" />
 								</a>
 							</li>
 							<li>
-								<a th:href="@{/litigant/consultation/free}"><span>我的免费咨询</span></a>
+								<a th:href="@{/litigant/case/consulting/free}"><span>我的免费咨询</span></a>
 							</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-4">
 						<ul class="introcoupCell mycenterCell">
 							<li>
-								<a th:href="@{/litigant/consultation/phone}">
+								<a th:href="@{/litigant/case/consulting/phone}">
 									<img th:src="@{/img/mycenter_phone.png}" />
 								</a>
 							</li>
 							<li>
-								<a th:href="@{/litigant/consultation/phone}"><span>我的电话咨询</span></a>
+								<a th:href="@{/litigant/case/consulting/phone}"><span>我的电话咨询</span></a>
 							</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-4">
 						<ul class="introcoupCell mycenterCell">
 							<li>
-								<a th:href="@{/litigant/lawsuit}">
+								<a th:href="@{/litigant/case/lawsuit/request_lawyer}">
 									<img th:src="@{/img/mycenter_aj.png}" />
 								</a>
 							</li>
 							<li>
-								<a th:href="@{/litigant/lawsuit}"><span>我的竞标案件</span></a>
+								<a th:href="@{/litigant/case/lawsuit/request_lawyer}"><span>我的竞标案件</span></a>
 							</li>
 						</ul>
 					</div>
