--- a/fxs-platform-web/src/main/resources/templates/public_consulting_free_step2.html
+++ b/fxs-platform-web/src/main/resources/templates/public_consulting_free_step2.html
@@ -13,11 +13,11 @@
 			</ol>
 			<h1 class="blue">填写纠纷基本信息</h1>
 			<section class="col-md-12 col-sm-12 introcouPhone space20 sBtn">
-				<h3 th:text="${rootQuestion.name}"></h3>
+				<h3 th:text="${rootQuestion.description}"></h3>
 				<div class="row">
 					<ul class="col-md-2 col-sm-2" th:each="answer : ${answers}">
 						<li class="introcoupCell btnSquare">
-							<a th:href="@{/public/question/{id}(id=${answer.nextQuestionId})}" th:id="${answer.id}" th:text="${answer.answer}"></a>
+							<a th:href="@{/public/question/{id}(id=${answer.nextQuestionId})}" th:id="${answer.id}" th:text="${answer.description}"></a>
 						</li>
 					</ul>
 				</div>
@@ -125,7 +125,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12 col-sm-12 btnNext">
-						<a type="button" class="btn btn-primary btn-lg" th:href="@{/public/consultation/next}">下一步</a>
+						<a type="button" class="btn btn-primary btn-lg" th:href="@{/public/case/consulting/next}">下一步</a>
 					</div>
 				</div>
 			</section>
