--- a/fxs-platform-web/src/main/resources/templates/public_consulting_phone.html
+++ b/fxs-platform-web/src/main/resources/templates/public_consulting_phone.html
@@ -105,7 +105,7 @@
 			$("#savePhoneConsulting").on("click", function() {
 				$.ajax({
 					type : 'POST',
-					url : '/consultation',
+					url : '/public/case/reservation',
 					data : JSON.stringify({"contactPhone": $("#contactPhone").val()}),
 					contentType : "application/json; charset=utf-8",
 					success : function(data) {
